# resume-me

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: resume.yaml  resume_schema.json  resume_template.html
src/resume_me/: __init__.py  main.py
